# RistiNolla

./: .gitignore  README.md
Documentation/: Design_document.md  Hour_reporting.md  Implementation_document.md  Selfplay.md  Testing_document.md  User_guide.md  Weekly_report_1.md  Weekly_report_2.md  Weekly_report_3.md  Weekly_report_4.md  Weekly_report_5.md  Weekly_report_6.md
Engine/: positions.txt
Engine/catch2/: board_correctness.cpp  makefile  search_correctness.cpp  test.cpp  test_util.h
Engine/src/: board.cpp  board.h  comms.cpp  comms.h  main.cpp  makefile  search.cpp  search.h  tt.cpp  tt.h  util.cpp  util.h
GUI/: pyproject.toml
GUI/gui/: board.py  config.cfg  config.py  main.py
