[tool.poetry]
name = "GUI"
version = "0.1.0"
description = ""
authors = ["altarchess <57199282+altarchess@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
